@@ -1,0 +1,5 @@
+.. class:: missing
+
+This should not be visible
+
+This should be the 1st paragraph in the output.
